--- a/scss/basic/section.scss
+++ b/scss/basic/section.scss
@@ -119,12 +119,25 @@ section {
       grid-row: 5;
       margin: auto;
     }
-    form button {
+    & button {
       grid-row: 6;
-      width: 180px;
+      width: 160px;
       margin: 2em auto 0;
       font-size: 1em;
     }
+  }
+}
+@include ie-browser {
+  #form label {
+    width: 17em;
+    text-align: left;
+    &:nth-of-type(-n+2) {
+      width: 17.5em;
+      margin-right: 1em;
+    }
+  }
+  #form input:nth-of-type(-n+2) {
+    margin-right: 1.5em;
   }
 }
 
